this is open source button

--- a/inde.html
+++ b/inde.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <p>Hey buddy</p>
-    <p>This is the new future</p>
+    <p>This is the new future (Open source)</p>
 </body>
 </html>
